# cparser

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  calc.c  calc_tests  calculator  calculator_reg  combinator_internals.h  combinators.c  combinators.h  isolated_test.c  json_main.c  json_parser.c  json_parser_cli  json_tests  json_tests.c  parse.c  parser.c  parser.h  pascal_parser_cli  pascal_tests  test_json_kv  test_json_object  test_json_string  test_json_whitespace.c  test_multi_fail  test_pascal  test_regex  test_regex.c  test_syntax  test_syntax.c  test_until.c  tests.c  types.h
.github/workflows/: main.yml
examples/: README.md
examples/calculator/: calc.c  calc_tests.c  calculator_logic.c  calculator_logic.h  test_calculator.sh
examples/fpc_parser/: fpc_main.c  fpc_parser.c  fpc_parser.h  fpc_tests.c
examples/json_parser/: json_main.c  json_parser.c  json_parser.h  json_tests.c
examples/pascal_parser/: pascal_declaration.c  pascal_declaration.h  pascal_driver.c  pascal_expression.c  pascal_expression.h  pascal_keywords.c  pascal_keywords.h  pascal_main.c  pascal_parser.c  pascal_parser.h  pascal_statement.c  pascal_statement.h  pascal_tests  pascal_tests.c  pascal_type.c  pascal_type.h  test_interim.txt  test_pascal  test_pascal_fixed  test_pascal_tests  test_strings  test_strings.c
examples/pascal_parser/missing_features_examples/: anonymous_methods_example.pas  generics_example.pas  helpers_attributes_example.pas  misc_features_example.pas  operator_overloading_example.pas  properties_forward_decl_example.pas
retrieved_tests/: dead_code.p  empty_program.p  fizzbuzz.p  for.p  mod_test.p  new_codegen_add.p  new_codegen_arithmetic.p  new_codegen_arithmetic_simple.p  new_codegen_global.p  new_codegen_if.p  new_codegen_proc.p  new_codegen_simple.p  new_codegen_while.p  sign_test.p  simple_asm.p  simple_expr.p  simple_func.p  simple_if.p  simple_proc.p  spill_test.p  stdlib.p  t0.p  t1-1b.p  t1-2.p  t1-3.p  t1-4.p  t1-5.p  t10-1.p  t10-2.p  t10a.p  t11-1.p  t11.p  t12.p  t13.p  t14-1.p  t14-2.p  t14.p  t1_1.p  t1_4.p  t2-2.p  (+26 more)
